--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,16 @@
 body {
   background-color: #555;
 }
-.home{
-  background-image: url(/assets/music.png);
-  background-repeat: none;
-}
+
+
+
 
 .factsaboutartists{
   background-image: url(/assets/crowd1.png);
   background-repeat: none;
 }
 
-img {
-  border: 15px darkslategrey;
-  padding: 20px;
-  border-radius: 15px;
-}
+
 
 .topnav {
   overflow: hidden;
@@ -62,7 +57,7 @@ body {
   font-weight: bold;
   padding: 10px 16px;
   font-size: 100px;
-  color: #04aa6d;
+  color: white;
   text-align: center;
 }
 
@@ -82,4 +77,36 @@ body {
   text-align: center;
 }
 
-.
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.pixabay.com/photo/2016/02/19/07/31/flames-1208852_1280.jpg");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+} 
+
+.hero-text button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: black;
+  background-color: #ddd;
+  text-align: center;
+  cursor: pointer;
+}
+
+.hero-text button:hover {
+  background-color: #555;
+  color: white;
+}
