--- a/styles/style.css
+++ b/styles/style.css
@@ -1,43 +1,43 @@
 body {
   background-color: #555;
-}
-
-
-
-
-.factsaboutartists{
-  background-image: url(/assets/crowd1.png);
   background-repeat: none;
 }
 
-
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
+.factsaboutartists {
+  background-image: url();
+  background-repeat: none;
 }
 
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+.menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100%;
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+
+.menu li {
+  margin-bottom: 10px;
+}
+
+.menu a {
+  display: block;
+  padding: 10px;
+  background-color: #fff;
+  color: #333;
   text-decoration: none;
-  font-size: 17px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
-.topnav a:hover {
-  background-color: #04aa6d;
-  color: white;
+.menu a.hover {
+  background-color: #333;
+  color: #fff;
 }
 
 * {
   box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -45,68 +45,27 @@ body {
   padding: 32px;
 }
 
-/* .collage {
-  display: block;
-  height: auto;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-} */
-
-.home .maintitle {
-  font-weight: bold;
-  padding: 10px 16px;
-  font-size: 100px;
-  color: white;
-  text-align: center;
-}
-
-<style>
-
-.dropbutton {
-  background-color: #4CAF50;
-  color: ;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-
-.h1{
-  text-align: center;
-}
-
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.pixabay.com/photo/2016/02/19/07/31/flames-1208852_1280.jpg");
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
+.hero {
+  background-image: url(https://c0.wallpaperflare.com/preview/225/618/416/audience-backlit-black-and-white-blue.jpg);
   background-size: cover;
-  position: relative;
+  height: 100vh;
+  display: grid;
+  justify-content: left;
+  align-items: left;
 }
 
 .hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-} 
-
-.hero-text button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 10px 25px;
-  color: black;
-  background-color: #ddd;
-  text-align: center;
-  cursor: pointer;
 }
 
-.hero-text button:hover {
-  background-color: #555;
-  color: white;
+.hero-text h1 {
+  font-size: 5rem;
+  margin-bottom: 2rem;
+}
+
+.hero-text p {
+  font-size: 2rem;
+}
+
+.select {
+  float: left;
 }
