--- a/styles/style.css
+++ b/styles/style.css
@@ -8,33 +8,6 @@ body {
   background-repeat: none;
 }
 
-.menu {
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-.menu li {
-  margin-bottom: 10px;
-}
-
-.menu a {
-  display: block;
-  padding: 10px;
-  background-color: #fff;
-  color: #333;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.menu a.hover {
-  background-color: #333;
-  color: #fff;
-}
 
 * {
   box-sizing: border-box;
@@ -58,8 +31,9 @@ body {
 }
 
 .hero-text h1 {
-  font-size: 5rem;
+  font-size: 15rem;
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 .hero-text p {
@@ -68,4 +42,50 @@ body {
 
 .select {
   float: left;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #D3D3D3;
+  overflow: auto;
+  height: 75%;
+  position: fixed;
+  border-radius: 10px;
+  margin-top: 100px;
+
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #555;
+  color: white;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+}
+
+.left, .right {
+  width: 25%;
+}
+
+.middle {
+  width: 50%;
+}
+
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
