--- a/styles/style.css
+++ b/styles/style.css
@@ -1,76 +1,217 @@
-body {
-  
-  margin: 0;
-}
-
-
 * {
   box-sizing: border-box;
 }
 
 .hero {
-  background-image: url(https://c0.wallpaperflare.com/preview/225/618/416/audience-backlit-black-and-white-blue.jpg);
+  background-image: url(https://c.pxhere.com/photos/f2/a3/uk_peterborough-398434.jpg!s2);
+  background-repeat: none;
   background-size: cover;
-  height: 100vh;   
+  height: 100vh;
   display: grid;
 }
 
 .hero-text {
-  text-align: center
+  font-style: italic;
+  text-align: center;
+  color: #d3d3d3;
 }
 
 .hero-text h1 {
-  font-size: 15rem;
+  font-size: 10rem;
   margin-bottom: 2rem;
   text-align: center;
 }
 
-.hero-text p {
+.hero-text p1 {
   font-size: 2rem;
+  text-align: center;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #D3D3D3;
-  overflow: auto;
-  height: 75%;
-  position: fixed;
-  border-radius: 10px;
-  margin-top: 100px;
-
-}
-
-li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #555;
+.rhino-text h1 {
+  font-size: 3rem;
+  margin-top: 2rem;
+  text-align: center;
   color: white;
 }
 
-.column {
+.rhino-text p1 {
+  font-size: 22px;
+  text-align: center;
+  color: white;
+}
+
+.hippo-text h1 {
+  font-size: 30px;
+  text-align: center;
+  margin-top: 1rem;
+  color: white;
+}
+
+.artist.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  justify-content: center;
+}
+
+.artist-name {
+  font-size: 18px;
+  font-weight: bold;
+  margin-right: 20px;
+  text-align: center;
+}
+
+.button {
+  background-color: grey;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 20px;
+  border-radius: 5px;
+  justify-content: center;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  font-family: Arial;
+}
+
+.navbar a {
   float: left;
-  padding: 10px;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-.left, .right {
-  width: 25%;
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-.middle {
-  width: 50%;
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
 }
 
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #8897dd;
+}
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.button {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 15px;
+  border: 2px solid black;
+  color: white;
+  padding: 13px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.myImage {
+  float: right;
+}
+
+.thirdimage {
+  float: right;
+  position: relative;
+  top: 100px;
+  right: -10px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: 100px;
+  right: -10px;
+  border: 5px solid grey;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.fourthimage {
+  float: right;
+  margin-top: 5%;
+  margin-bottom: 50%;
+}
+
+.float-image {
+  margin: 40px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: 50px;
+  left: -30px;
+  border: 5px solid grey;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.fifthimage {
+  float: right;
+}
+
+.float-image-second {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: 100px;
+  left: -80px;
+  border: 5px solid grey;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.sixthimage {
+  float: right;
+  position: relative;
+  top: 150px;
+  left: -120px;
+}
+
+.float-image-third {
+  margin: 40px;
+}
+
+.seventhimage {
+  float: right;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: 100px;
+  right: -10px;
+  left: -170px;
+  border: 5px solid grey;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.eighthimage {
+  float: left;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: 150px;
+  right: -90px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
