--- a/styles/style.css
+++ b/styles/style.css
@@ -11,10 +11,28 @@
   display: grid;
 }
 
+.touring {
+  background-color: #484848;
+  height: 200vh;
+  display: grid;
+}
+
 .hero-text {
   font-style: italic;
   text-align: center;
   color: #d3d3d3;
+}
+
+.tickets-text h1 {
+  font-size: 50px;
+  text-align: center;
+  color: white;
+}
+
+.tickets-text {
+  font-style: italic;
+  text-align: center;
+  color: white;
 }
 
 .hero-text h1 {
@@ -29,23 +47,23 @@
 }
 
 .subheading {
-  font-size:  50px;
+  font-size: 50px;
 }
 
-.rhino-text h1 {
+.touring-text h1 {
   font-size: 3rem;
   margin-top: 2rem;
   text-align: center;
   color: white;
 }
 
-.rhino-text p1 {
+.touring-text p1 {
   font-size: 22px;
   text-align: center;
   color: white;
 }
 
-.hippo-text h1 {
+.touring-text h1 {
   font-size: 30px;
   text-align: center;
   margin-top: 1rem;
@@ -53,10 +71,10 @@
 }
 
 .artist.container {
-  display: flex;
+  display: grid;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 80px;
   justify-content: center;
 }
 
@@ -68,23 +86,38 @@
 }
 
 .button {
-  background-color: grey;
-  border: none;
+  background-image: url(https://live.staticflickr.com/65535/49128854276_e6dbcbd892_b.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border: rgba(0, 0, 0, 0.5);
   color: white;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: flex;
   font-size: 16px;
-  margin-left: 20px;
+  margin-left: 0px;
   border-radius: 5px;
   justify-content: center;
+}
+
+.button {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 15px;
+  border: 2px solid black;
+  color: white;
+  padding: 13px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
 }
 
 .navbar {
   overflow: hidden;
   background-color: #333;
-  font-family: Arial;
 }
 
 .navbar a {
@@ -114,50 +147,37 @@
 
 .navbar a:hover,
 .dropdown:hover .dropbtn {
-  background-color: #8897dd;
+  background-color: red;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: white;
+  background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
 .dropdown-content a:hover {
   background-color: #ddd;
 }
 
-.button {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-radius: 15px;
-  border: 2px solid black;
-  color: white;
-  padding: 13px 32px;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  display: flex;
-  flex-direction: column;
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 .myImage {
   float: right;
-}
-
-.thirdimage {
-  float: right;
-  position: relative;
-  top: 100px;
-  right: -10px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-  position: relative;
-  top: 100px;
-  right: -10px;
-  border: 5px solid grey;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .fourthimage {
@@ -170,9 +190,9 @@
   margin: 40px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   position: relative;
-  top: 50px;
-  left: -30px;
-  border: 5px solid grey;
+  top: -30px;
+  left: -20px;
+  /* border: 5px solid grey; */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -183,17 +203,24 @@
 .float-image-second {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   position: relative;
-  top: 100px;
-  left: -80px;
-  border: 5px solid grey;
+  top: 10px;
+  left: -20px;
+  /* border: 5px solid grey; */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .sixthimage {
   float: right;
   position: relative;
-  top: 150px;
-  left: -120px;
+  top: -30px;
+  left: -20px;
+}
+
+.text1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .float-image-third {
@@ -204,10 +231,10 @@
   float: right;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   position: relative;
-  top: 100px;
+  top: 10px;
   right: -10px;
-  left: -170px;
-  border: 5px solid grey;
+  left: -20px;
+  /* border: 5px solid grey; */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -215,12 +242,8 @@
   float: left;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   position: relative;
-  top: 150px;
-  right: -90px;
-  border: 1px solid #ccc;
+  top: 50px;
+  left: -10px;
+  /* border: 1px solid #ccc; */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.body {
-  background-color: grey;
 }
